log/includeos_error_dirent.h_181006172130
In file included from /sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:1:
In file included from /sapmnt/HOME/i850193/local/IncludeOS/includeos/x86_64/include/newlib/dirent.h:7:
/sapmnt/HOME/i850193/local/IncludeOS/includeos/x86_64/include/newlib/sys/dirent.h:10:2: error: "<dirent.h> not supported"
#error "<dirent.h> not supported"
 ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:6:10: warning: PXNAME dirent ! [-W#pragma-messages]
        #pragma message "PXNAME dirent !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:11:10: warning: PXMISSING dirent ! [-W#pragma-messages]
        #pragma message "PXMISSING dirent !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:18:10: warning: PXNAME alphasort ! [-W#pragma-messages]
        #pragma message "PXNAME alphasort !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:23:10: warning: PXMISSING alphasort ! [-W#pragma-messages]
        #pragma message "PXMISSING alphasort !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:30:10: warning: PXNAME closedir ! [-W#pragma-messages]
        #pragma message "PXNAME closedir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:35:10: warning: PXMISSING closedir ! [-W#pragma-messages]
        #pragma message "PXMISSING closedir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:42:10: warning: PXNAME dirfd ! [-W#pragma-messages]
        #pragma message "PXNAME dirfd !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:47:10: warning: PXMISSING dirfd ! [-W#pragma-messages]
        #pragma message "PXMISSING dirfd !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:54:10: warning: PXNAME fdopendir ! [-W#pragma-messages]
        #pragma message "PXNAME fdopendir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:59:10: warning: PXMISSING fdopendir ! [-W#pragma-messages]
        #pragma message "PXMISSING fdopendir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:66:10: warning: PXNAME opendir ! [-W#pragma-messages]
        #pragma message "PXNAME opendir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:71:10: warning: PXMISSING opendir ! [-W#pragma-messages]
        #pragma message "PXMISSING opendir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:78:10: warning: PXNAME readdir ! [-W#pragma-messages]
        #pragma message "PXNAME readdir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:83:10: warning: PXMISSING readdir ! [-W#pragma-messages]
        #pragma message "PXMISSING readdir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:90:10: warning: PXNAME readdir_r ! [-W#pragma-messages]
        #pragma message "PXNAME readdir_r !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:95:10: warning: PXMISSING readdir_r ! [-W#pragma-messages]
        #pragma message "PXMISSING readdir_r !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:102:10: warning: PXNAME rewinddir ! [-W#pragma-messages]
        #pragma message "PXNAME rewinddir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:107:10: warning: PXMISSING rewinddir ! [-W#pragma-messages]
        #pragma message "PXMISSING rewinddir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:114:10: warning: PXNAME scandir ! [-W#pragma-messages]
        #pragma message "PXNAME scandir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:119:10: warning: PXMISSING scandir ! [-W#pragma-messages]
        #pragma message "PXMISSING scandir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:126:10: warning: PXNAME seekdir ! [-W#pragma-messages]
        #pragma message "PXNAME seekdir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:131:10: warning: PXMISSING seekdir ! [-W#pragma-messages]
        #pragma message "PXMISSING seekdir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:138:10: warning: PXNAME telldir ! [-W#pragma-messages]
        #pragma message "PXNAME telldir !"
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp:143:10: warning: PXMISSING telldir ! [-W#pragma-messages]
        #pragma message "PXMISSING telldir !"
                ^
24 warnings and 1 error generated.
make[2]: *** [CMakeFiles/service.dir/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/out/dirent.h/evaluation.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/service.dir/all] Error 2
make: *** [all] Error 2
[34m* <VMRunner>: [0m Building with cmake ([])
[32m> [90m-- Building for arch x86_64, platform x86_pc[0m
[32m> [90m-- The C compiler identification is Clang 5.0.0[0m
[32m> [90m-- The CXX compiler identification is Clang 5.0.0[0m
[32m> [90m-- Check for working C compiler: /usr/bin/clang-5.0[0m
[32m> [90m-- Check for working C compiler: /usr/bin/clang-5.0 -- works[0m
[32m> [90m-- Detecting C compiler ABI info[0m
[32m> [90m-- Detecting C compiler ABI info - done[0m
[32m> [90m-- Detecting C compile features[0m
[32m> [90m-- Detecting C compile features - done[0m
[32m> [90m-- Check for working CXX compiler: /usr/bin/clang++-5.0[0m
[32m> [90m-- Check for working CXX compiler: /usr/bin/clang++-5.0 -- works[0m
[32m> [90m-- Detecting CXX compiler ABI info[0m
[32m> [90m-- Detecting CXX compiler ABI info - done[0m
[32m> [90m-- Detecting CXX compile features[0m
[32m> [90m-- Detecting CXX compile features - done[0m
[32m> [90m-- Target triple x86_64-pc-linux-elf[0m
[32m> [90m-- Using vanilla CPU features: SSE3. CAPABS = -msse3 -mfpmath=sse[0m
[32m> [90m-- The ASM_NASM compiler identification is unknown[0m
[32m> [90m-- Found assembler: /usr/bin/nasm[0m
[32m> [90m-- Building without threading / SMP[0m
[32m> [90m-- Looking for drivers in /sapmnt/HOME/i850193/local/IncludeOS/includeos/x86_64/drivers[0m
[32m> [90m-- 	* Found default_stdout[0m
[32m> [90m-- Configuring done[0m
[32m> [90m-- Generating done[0m
[32m> [90m-- Build files have been written to: /sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/build[0m
[34m* <VMRunner>: [0m Building with 'make' (params=[])
Exception while building:  Command '['make', '-j4']' returned non-zero exit status 2

[31;1m[ BUILD_FAIL ] building with cmake failed[0m

